--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,32 @@
 @import url('https://renan-santos.netlify.app/styles/reset.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+	--cor1: #1875e8;
+	--cor2: #6bd1ff;
+	--cor3: #eff9ff;
+	--bg: #f5f5f5;
+	--bg2: #ffffff;
+	--shadow: 0 0 4px rgba(0,0,0,0.25);
+
+	--cor-texto: #444444;
+	--cor-titulo: #041833;
+
+	--font: 'Montserrat', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+	--page-width: 1200px;
+}
+
+* {
+	font-family: var(--font);
+}
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	background-color: var(--bg);
+	overflow-x: hidden;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-size: 1rem;
+	color: var(--cor-texto);
 }
 
 code {
