--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,13 @@
 	--cor1: #1875e8;
 	--cor2: #6bd1ff;
 	--cor3: #eff9ff;
+	--cor4: #041833;
 	--bg: #f5f5f5;
 	--bg2: #ffffff;
 	--shadow: 0 0 4px rgba(0,0,0,0.25);
 
 	--cor-texto: #444444;
-	--cor-titulo: #041833;
+	--cor-titulo: var(--cor4);
 
 	--font: 'Montserrat', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -31,4 +32,9 @@ body {
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.largura {
+	width: var(--page-width);
+	margin-inline: auto;
 }
