--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 	--cor2: #6bd1ff;
 	--cor3: #eff9ff;
 	--cor4: #041833;
+	--cinza1: #D9D9D9;
 	--bg: #f5f5f5;
 	--bg2: #ffffff;
 	--shadow: 0 0 4px rgba(0,0,0,0.25);
@@ -37,4 +38,9 @@ code {
 .largura {
 	width: var(--page-width);
 	margin-inline: auto;
+}
+
+img {
+	height: 100%;
+	object-fit: cover;
 }
