--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     color: white;
+    margin-top: 5rem;
 
     .destaque {
         font-weight: 500;
