--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -21,3 +21,9 @@
     font-weight: 600;
     text-decoration: underline;
 }
+
+.fotoUsuario {
+    width: 3.25rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
