--- a/src/pages/PagProduto/components/HeroProd/HeroProd.module.css
+++ b/src/pages/PagProduto/components/HeroProd/HeroProd.module.css
@@ -6,11 +6,12 @@
 
 .imgContainer {
     --tamanho: 400px;
+    background-color: white;
     width: var(--tamanho);
     height: var(--tamanho);
 
     img {
-        object-fit: cover;
+        object-fit: scale-down;
     }
 }
 
