--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -5,22 +5,39 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    border-radius: 4px;
+    overflow: hidden;
+    transition: .6s ease-in-out;
+    
     section {
         padding: 1rem;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        
+        h3 {
+            margin-bottom: 1rem;
+        }
 
         p {
             font-size: .875rem;
             line-height: 1.25;
+            margin-bottom: .5rem;
         }
+    }
+    
+    &:hover {
+        box-shadow: var(--shadow2);
+        transform: translate(-1px, -1px);
     }
 }
 
 .imgContainer {
     height: 12rem;
+    background-color: white;
+
+    img {
+        object-fit: contain;
+    }
 }
 
 .titulo {
@@ -30,24 +47,29 @@
 }
 
 .footer {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 50% 1fr 1fr;
+    align-items: center;
     height: 4.5rem;
 
     .preco {
-        width: 172px;
+        grid-column: 1;
         background-color: var(--cor1);
         color: white;
+        flex:1;
         display: flex;
         align-items: center;
         justify-content: center;
         font-weight: 500;
         font-size: 1.25rem;
+        align-self: stretch;
     }
 
-    .botoes {
-        display: flex;
-        gap: 2rem;
-        padding-right: 1rem;
+    .favoritar {
+        grid-column: 2;
+    }
+
+    .carrinho {
+        grid-column: 3;
     }
 }
