--- a/src/components/CardsContainer/CardsContainer.module.css
+++ b/src/components/CardsContainer/CardsContainer.module.css
@@ -1,5 +1,5 @@
 .titulo {
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: 500;
     text-align: center;
     margin-block: 4.5rem 1.5rem;
