--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
 	--cinza1: #D9D9D9;
 	--bg: #f5f5f5;
 	--bg2: #ffffff;
-	--shadow: 0 0 4px rgba(0,0,0,0.25);
+	--shadow: 0 0 4px rgba(0,0,0,0.15);
+	--shadow2: 0 0 4px rgba(0,0,0,0.15), 
+			4px 4px 8px rgba(0,0,0,0.10);
 
 	--cor-texto: #444444;
 	--cor-titulo: var(--cor4);
