--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-	--cor1: #1875e8;
+	--cor1: hsl(213, 82%, 50%);
+	--cor1dark: hsl(213, 82%, 35%);
 	--cor2: #6bd1ff;
 	--cor3: #eff9ff;
 	--cor4: #041833;
 	--cinza1: #D9D9D9;
 	--bg: #f5f5f5;
 	--bg2: #ffffff;
-	--shadow: 0 0 4px rgba(0,0,0,0.15);
+	--shadow: 0 0 4px rgba(0,0,0,0.06);
 	--shadow2: 0 0 4px rgba(0,0,0,0.15), 
 			4px 4px 8px rgba(0,0,0,0.10);
 
