--- a/src/pages/PagCarrinho/components/CardCarrinho/CardCarrinho.module.css
+++ b/src/pages/PagCarrinho/components/CardCarrinho/CardCarrinho.module.css
@@ -19,6 +19,9 @@
     grid-column: 2;
     padding: 2rem;
     background-color: var(--cor3);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     
         h3 {
             font-weight: 500;
